--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,16 @@
 <resources>
-    <string name="app_name">HealMeBaby</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-
+    <string name="app_name">HealthApp</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
+    <string name="planner_page_send">Planner Page</string>
+    <string name="save_plan">Save Plan</string>
+    <string name="enter_workout">Enter a workout</string>
+    <string name="workout_monday">Monday</string>
+    <string name="workout_tuesday">Tuesday</string>
+    <string name="workout_wednesday">Wednesday</string>
+    <string name="workout_thursday">Thursday</string>
+    <string name="workout_friday">Friday</string>
+    <string name="workout_saturday">Saturday</string>
+    <string name="workout_sunday">Sunday</string>
+    <string name="toast_output"></string>
 </resources>
