--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="toast_output"></string>
     <string name="pedometer">Pedometer</string>
 
-    <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_in">BALLLLLLLS</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_register">Register</string>
     <string name="error_field_required">This field is required</string>
