--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,10 +70,10 @@
     <string name="thursday">THURSDAY</string>
     <string name="friday">FRIDAY</string>
     <string name="saturday">SATURDAY</string>
-    <string name="month">\t--\t</string>
-    <string name="day"> </string>
+    <string name="month">/</string>
+    <string name="day">/</string>
     <string name="todo">TODO</string>
-    <string name="information">Info</string>
+    <string name="information">View More</string>
     <string name="settings_title">Settings</string>
     <string name="sensitivity">Sensitivity</string>
     <string name="low">Low</string>
@@ -92,6 +92,13 @@
     <string name="title_activity_start">StartActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_pedometer_info">PedometerInfoActivity</string>
+    <string name="info_1">Today you\'ve achieved</string>
+    <string name="info_2">%s steps</string>
+    <string name="info_3">%s miles</string>
+    <string name="info_4">%s calories</string>
+    <string name="y_info_1">Yesterday, you took</string>
+    <string name="y_info_2">%s steps</string>
 
 
 </resources>
