--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,6 +99,8 @@
     <string name="info_4">%s calories</string>
     <string name="y_info_1">Yesterday, you took</string>
     <string name="y_info_2">%s steps</string>
+    <string name="settings">Settings</string>
+    <string name="view_more">View More</string>
 
 
 </resources>
